Updated description day 20, minor refactoring